# rag-practice-001

./: .gitignore  pyproject.toml
database/: halfvec_type.sql  setup_rag_full_with_permissions.sql
notebooks/: 01.Simple-RAG-Practice.ipynb
rag_core/: __init__.py
rag_core/config/: __init__.py  settings.py
rag_core/database/: __init__.py  connection.py
rag_core/embeddings/: __init__.py  manager.py
rag_core/models/: __init__.py  rag_models.py
rag_core/retrievers/: __init__.py  dense_retriever.py  sparse_retriever.py
